--- a/cloud-config-server/template/cloud-config.template
+++ b/cloud-config-server/template/cloud-config.template
@@ -337,6 +337,23 @@ coreos:
             RemainAfterExit=yes
             Type=oneshot
 
+        - name: setup-gpu.service
+          runtime: true
+          command: start
+          content: |
+            [Unit]
+            Description=Setup GPU
+            Requires=network.target
+            After=network.target
+            [Service]
+            ExecStartPre=/usr/bin/mkdir -p /opt/gpu
+            ExecStartPre=/usr/bin/wget -P /opt/gpu http://{{ .BootstrapperIP }}/static/gpu-drivers/coreos/{{ .CoreOSVersion }}/setup_gpu.sh
+            ExecStartPre=/usr/bin/wget -P /opt/gpu -r -nd http://{{ .BootstrapperIP }}/static/gpu-drivers/coreos/{{ .CoreOSVersion }}
+            ExecStart=/bin/bash /opt/gpu/setup_gpu.sh {{ .CoreOSVersion }} {{ .GPUDriversVersion }}
+            RemainAfterExit=no
+            Type=oneshot
+
+
         - name: "settimezone.service"
           command: start
           content: |
@@ -386,6 +403,7 @@ coreos:
             Type=oneshot
           {{- end}}
 
+
         - name: docker.service
           runtime: true
           command: start
@@ -395,6 +413,7 @@ coreos:
               [Unit]
               After=docker.socket early-docker.target network.target flanneld.service
               Requires=docker.socket early-docker.target flanneld.service
+
         {{- if .KubeMaster }}
         - name: kube-addons.service
           command: start
@@ -443,6 +462,8 @@ coreos:
             RestartSec=10
             [Install]
             WantedBy=multi-user.target
+
+
         {{- else }}
         - name: kubelet.service
           runtime: true
@@ -470,12 +491,12 @@ coreos:
             --kubeconfig=/etc/kubernetes/worker-kubeconfig.yaml \
             --tls-private-key-file=/etc/kubernetes/ssl/worker-key.pem \
             --tls-cert-file=/etc/kubernetes/ssl/worker.pem \
-            {{ if .IngressLabel }}
+            {{ if .IngressLabel }} \
             --logtostderr=true \
             --node-labels=role=ingress \
-            {{ else }}
+            {{ else }} \
             --logtostderr=true \
-            {{ end }}
+            {{ end }} \
             --network-plugin= \
             --network-plugin-dir=/etc/cni/net.d
             Restart=always
@@ -483,23 +504,7 @@ coreos:
             [Install]
             WantedBy=multi-user.target
         {{- end}}
-
-        - name: "setup-gpu.service"
-          command: start
-          content: |
-            [Unit]
-            Description=Setup GPU
-            Requires=network.target
-            After=network.target
-
-            [Service]
-            ExecStartPre=/bin/wget --quiet -P /home/core -r -nd http://{{ .BootstrapperIP }}/static/gpu-drivers/coreos/{{ .CoreOSVersion }}
-            ExecStart=/bin/bash /home/core/setup_gpu.sh {{ .CoreOSVersion }} {{ .GPUDriversVersion }}
-            RemainAfterExit=no
-            Type=oneshot
-
-
-
+ 
 hostname: "{{ .Hostname }}"
 
 ssh_authorized_keys:
