Create dnsmasq lease file directory

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -8,11 +8,8 @@ apk add dnsmasq openssl
 
 # Upload Sextant Go programs and retrieve dependencies.
 RUN mkdir -p /go/bin
-COPY cloud-config-server /
-COPY registry            /
-
-# TODO(yi): Why do we need to create /go/static?
-RUN mkdir /go/static
+COPY cloud-config-server /go/bin
+COPY registry            /go/bin
 
 # NOTICE: change install.sh HTTP server ip:port when running entrypoint.sh
 COPY entrypoint.sh /
