Modify variables SetNtp  as SetNTP

--- a/addons/template/dnsmasq.conf.template
+++ b/addons/template/dnsmasq.conf.template
@@ -3,7 +3,7 @@ user=root
 dhcp-range={{ .IPLow }},{{ .IPHigh }},{{ .Netmask }},12h
 log-dhcp
 
-{{- if .SetNtp }}
+{{- if .SetNTP }}
 dhcp-option=option:ntp-server,{{ .Bootstrapper }}
 {{- end }}
 dhcp-option=28,{{ .Broadcast }}
