--- a/vm-cluster/cluster-desc.yml.template
+++ b/vm-cluster/cluster-desc.yml.template
@@ -28,7 +28,7 @@ gpu_drivers_version: "367.57"
 set_ntp: y
 
 # OS type: CentOS or CoreOS
-os_name: "CentOS"
+os_name: "CoreOS"
 
 ingress_hostnetwork: true
 
