--- a/cloud-config-server/template/cluster-desc.sample.yaml
+++ b/cloud-config-server/template/cluster-desc.sample.yaml
@@ -24,6 +24,7 @@ coreos_version: "1122.2.0"
 centos_version: "7.2.1511"
 
 # gpu drivers version
+set_gpu: n
 gpu_drivers_version: "367.57"
 
 ingress_hostnetwork: true
@@ -32,7 +33,7 @@ ingress_hostnetwork: true
 set_ntp: y
 
 #OS type: CentOS or CoreOS
-os_name: "CentOS"
+os_name: "CreOS"
 
 coreos:
   reboot_strategy: "etcd-lock"
