--- a/vm-cluster/cluster-desc.yml.template
+++ b/vm-cluster/cluster-desc.yml.template
@@ -22,6 +22,7 @@ coreos_channel: "stable"
 coreos_version: "1122.2.0"
 
 # gpu drivers version
+set_gpu: n
 gpu_drivers_version: "367.57"
 
 # Ntpserver set_ntp option for the cluster configuration.
