去掉首行为空行的问题

--- a/cloud-config-server/template/templatefiles/cloud-config.template
+++ b/cloud-config-server/template/templatefiles/cloud-config.template
@@ -1,5 +1,4 @@
-{{ define "cc-template" }}
-#cloud-config
+{{ define "cc-template" }}#cloud-config
 write_files:
 {{ template "common" .}}
 {{- if ne .OSName "CentOS" }}
