--- a/cloud-config-server/template/cluster-desc.sample.yaml
+++ b/cloud-config-server/template/cluster-desc.sample.yaml
@@ -39,9 +39,9 @@ os_name: "CentOS"
 # If you need to configure the other repository, need to open the configuration switch.
 # Currently supports only add 163 repository.
 # for example: 163 repo:
-#  set_yum_repo: "163"
+#  set_yum_repo: "mirrors.163.com"
 #set_yum_repo: "bootstrapper"
-set_yum_repo: "163"
+set_yum_repo: "mirrors.163.com"
 
 # kube master ip, there should be cluster ip
 kube_master_ip:
