--- a/addons/template/influxdb-grafana-controller.template
+++ b/addons/template/influxdb-grafana-controller.template
@@ -16,12 +16,12 @@ spec:
     spec:
       containers:
       - name: influxdb
-        image: kubernetes/heapster_influxdb:v0.5
+        image: {{ .Dockerdomain }}:5000/{{ .Images.influxdb }}
         volumeMounts:
         - mountPath: /data
           name: influxdb-storage
       - name: grafana
-        image: lupan/heapster_grafana:v2.6.0-2
+        image: {{ .Dockerdomain }}:5000/{{ .Images.grafana }}
         env:
           - name: INFLUXDB_SERVICE_URL
             value: http://monitoring-influxdb:8086
