--- a/vm-cluster/cluster-desc.yml.template
+++ b/vm-cluster/cluster-desc.yml.template
@@ -31,7 +31,7 @@ gpu_drivers_version: "367.57"
 set_ntp: y
 
 # OS type: CentOS or CoreOS
-os_name: "CentOS"
+os_name: "CoreOS"
 
 # Centos repository: default repository for bootstrapper,
 # If you need to configure the other repository, need to open the configuration switch.
@@ -71,6 +71,9 @@ images:
   ceph: "typhoon1986/ceph-daemon:tag-build-master-jewel-ubuntu-14.04-fix370"
   default_backend: "yancey1989/defaultbackend:1.0"
   ntp: "redaphid/docker-ntp-server"
+  heapster: "kubernetes/heapster:canary"
+  grafana: "lupan/heapster_grafana:v2.6.0-2"
+  influxdb: "kubernetes/heapster_influxdb:v0.5"
 
 nodes:
   - mac: "08:00:27:4a:2d:a1"
