修复有些pod不能自动启动的问题

--- a/addons/template/heapster-controller.template
+++ b/addons/template/heapster-controller.template
@@ -5,6 +5,7 @@ metadata:
     k8s-app: heapster
     name: heapster
     version: v6
+    kubernetes.io/cluster-service: "true"
   name: heapster
   namespace: kube-system
 spec:
