--- a/addons/template/influxdb-grafana-controller.template
+++ b/addons/template/influxdb-grafana-controller.template
@@ -3,6 +3,7 @@ kind: ReplicationController
 metadata:
   labels:
     name: influxGrafana
+    kubernetes.io/cluster-service: "true"
   name: influxdb-grafana
   namespace: kube-system
 spec:
