--- a/addons/template/influxdb-service.yaml
+++ b/addons/template/influxdb-service.yaml
@@ -1,7 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  labels: null
+  labels:
+    kubernetes.io/cluster-service: "true"
   name: monitoring-influxdb
   namespace: kube-system
 spec:
