--- a/cloud-config-server/template/cluster-desc.sample.yaml
+++ b/cloud-config-server/template/cluster-desc.sample.yaml
@@ -73,7 +73,7 @@ images:
   ntp: "redaphid/docker-ntp-server"
   heapster: "kubernetes/heapster:canary"
   grafana: "lupan/heapster_grafana:v2.6.0-2"
-  influxdb: "kubernetes/heapster_influxdb:v0.5"
+  influxdb: "lupan/heapster_influxdb:v0.5"
 
 nodes:
   - mac: "00:25:90:c0:f7:80"
