--- a/cloud-config-server/template/cluster-desc.sample.yaml
+++ b/cloud-config-server/template/cluster-desc.sample.yaml
@@ -31,6 +31,7 @@ ingress_hostnetwork: true
 
 # Ntpserver set_ntp option for the cluster configuration.
 set_ntp: y
+lease: "infinite"
 
 #OS type: CentOS or CoreOS
 os_name: "CentOS"
