--- a/golang/template/templatefiles/cc-centos.template
+++ b/golang/template/templatefiles/cc-centos.template
@@ -5,7 +5,9 @@
     content: |
       [Unit]
       Description=etcd
-      Conflicts=etcd.service
+      After=network.target
+      After=network-online.target
+      Wants=network-online.target
 
       [Service]
       Type=notify
