Fix template bugs

--- a/golang/template/templatefiles/cc-centos-post.template
+++ b/golang/template/templatefiles/cc-centos-post.template
@@ -1,5 +1,4 @@
-{{ define "centos-post-script" }}
-#!/usr/bin/env bash
+{{ define "centos-post-script" }}#!/usr/bin/env bash
 
 set_hostname() {
     default_iface=$(awk '$2 == 00000000 { print $1   }' /proc/net/route | uniq)
@@ -28,7 +27,7 @@ set_docker() {
 
 set_ssh_config() {
     mkdir -p /root/.ssh
-    chomd 700 /root/.ssh
+    chmod 700 /root/.ssh
     cat > /root/.ssh/config <<EOF
 Host *
 GSSAPIAuthentication no
@@ -37,13 +36,10 @@ UserKnownHostsFile=/dev/null
 
 EOF
 
-    chomd 600 /root/.ssh/config
-
+    chmod 600 /root/.ssh/config
 }
 
 set_yum_repo(){
-
-cluster_desc_set_yum_repo=$2
 
 if [[ {{ .CentOSYumRepo }} == "bootstrapper" ]]; then
 
@@ -59,7 +55,7 @@ EOF
 else
 
     cp /etc/yum.repos.d/CentOS-Base.repo{,.bak}
-    sed -i -e 's/mirrorlist/#mirrorlist/@g' /etc/yum.repos.d/CentOS-Base.repo
+    sed -i -e 's/mirrorlist/#mirrorlist/g' /etc/yum.repos.d/CentOS-Base.repo
     sed -i -e 's@#baseurl=http://[^/]*@baseurl=http://{{ .CentOSYumRepo }}@g' /etc/yum.repos.d/CentOS-Base.repo
 
 fi
@@ -68,8 +64,6 @@ yum clean all
 yum makecache
 
 }
-
-
 
 set_hostname
 set_docker
