--- a/golang/template/templatefiles/cc-centos.template
+++ b/golang/template/templatefiles/cc-centos.template
@@ -198,7 +198,7 @@
       --hostname-override={{ .MasterHostname }} \
       --cluster-dns={{ .K8sClusterDNS }} \
       --cluster-domain=cluster.local \
-      --feature-gates=Accelerators=true \
+      --feature-gates=Accelerators=true 
       Restart=always
       RestartSec=10
       [Install]
