--- a/golang/template/templatefiles/cc-coreos.template
+++ b/golang/template/templatefiles/cc-coreos.template
@@ -243,7 +243,7 @@ coreos:
             --hostname-override={{ .MasterHostname }} \
             --cluster-dns={{ .K8sClusterDNS }} \
             --cluster-domain=cluster.local \
-            --feature-gates=Accelerators=true \
+            --feature-gates=Accelerators=true 
             Restart=always
             RestartSec=10
             [Install]
