--- a/golang/template/cluster-desc.sample.yaml
+++ b/golang/template/cluster-desc.sample.yaml
@@ -21,6 +21,8 @@ coreos_channel: "stable"
 # coreos_version can be configured as the special version num or "current"
 coreos_version: "1122.2.0"
 
+# centos version
+download_centos: n
 centos_version: "7.3.1611"
 
 # gpu drivers version
