--- a/ansible/roles/centos/tasks/main.yml
+++ b/ansible/roles/centos/tasks/main.yml
@@ -1,19 +1,41 @@
 ---
-- name: copy systemd service
+- name: template systemd service
   template: 
     src: "{{ item.src }}"
     dest: "{{ item.dest }}"
-    mode: 0600
+    mode: 0644
     owner: root
     group: root
   with_items:
-    - { src: systemd/etcd.j2, dest: /usr/lib/systemd/system/etcd.service }
+    - { src: etcd.j2, dest: /usr/lib/systemd/system/etcd.service }
+    - { src: flanneld.j2, dest: /usr/lib/systemd/system/flanneld.service }
+    - { src: setup-network-enviroment.j2, dest: /etc/systemd/system/setup-network-environment.service }
+  tags: systemd
 
-- name: /etc/hosts
-  template:
-    src: hosts.j2
-    dest: /etc/hosts
+- name: copy systemd service
+  copy: 
+    src: "{{ item.src }}"
+    dest: "{{ item.dest }}"
+    mode: 0644
     owner: root
     group: root
-    
+  with_items:
+    - { src: settimezone.service, dest: /etc/systemd/system/settimezone.service }
+  tags: systemd
+
+- name: set up authorized_keys
+  authorized_key:
+    user: root
+    state: present
+    key: "{{ item }}" 
+  with_file:
+    - authorized_keys
+
+- name: notify
+  debug: 
+    msg: "send notify"
+  notify:
+    - stop and diable NetworkManager
+    - enable docker
+#    - reboot
 
