--- a/ansible/roles/worker/tasks/main.yml
+++ b/ansible/roles/worker/tasks/main.yml
@@ -1,14 +1,41 @@
 ---
-- name: copy woker cert and key 
-  copy:
-    src: "{{ item.src }}"
-    dest: "{{ item.dest }}"
-    mode: 0600
-    owner: root
-    group: root
+- name: create path 
+  file:
+    path: "{{ item }}"
+    state: directory
+    mode: 0755
   with_items:
-    - { src: tls/worker.pem, dest: /etc/kubernetes/ssl/worker.pem }
-    - { src: tls/worker-key.pem, dest: /etc/kubernetes/ssl/worker-key.pem }
+    - /etc/kubernetes
+    - /etc/kubernetes/ssl
+    - /etc/kubernetes/config
+    - /etc/kubernetes/manifest
+
+# Generate an OpenSSL private key with a size (2048 bits)
+- name: generate private key
+  shell: openssl genrsa -out /etc/kubernetes/ssl/worker-key.pem 2048
+  args:
+    chdir: /etc/kubernetes/ssl
+  tags: tls
+
+- name: generate openssl.conf
+  template:
+    src: openssl-conf.j2
+    dest: /etc/kubernetes/ssl/openssl.conf
+    mode: 0644
+    owner: root
+  tags: tls
+
+# Generate an OpenSSL Certificate Signing Request
+- name: generate CSR 
+  shell: openssl req -new -key worker-key.pem -out worker.csr -subj "/CN={{ inventory_hostname }}" -config openssl.conf
+  args:
+    chdir: /etc/kubernetes/ssl
+  tags: tls
+
+- name: create certificate
+  shell: openssl x509 -req -in worker.csr -CA ca.pem -CAkey ca-key.pem -CAcreateserial -out worker.pem -days 3650 -extensions v3_req -extfile openssl.conf
+  args:
+    chdir: /etc/kubernetes/ssl
   tags: tls
 
 - name: template worker-kubeconfig.yaml, kube-proxy.manifest and kubelet.service
