--- a/ansible/roles/centos/handlers/main.yml
+++ b/ansible/roles/centos/handlers/main.yml
@@ -1,9 +1,22 @@
 ---
 - name: stop and diable NetworkManager
-  service: name=NetworkManager state=stopped enabled=no
+  systemd: name=NetworkManager state=stopped enabled=no
 
 - name: enable docker
-  service: name=docker enabled=yes
+  systemd: name=docker enabled=yes
+
+- name: enable service
+  systemd: 
+    name: "{{ item }}"
+    enabled: yes 
+    daemon_reload: yes
+  with_items:
+    - etcd
+    - flanneld
+    - setup-network-environment
+    - settimezone
 
 - name: reboot 
   command: reboot 
+
+
