fix kubelet and kube-addons config.

--- a/ansible/roles/master/files/config/local-kubeconfig.yaml
+++ b/ansible/roles/master/files/config/local-kubeconfig.yaml
@@ -8,8 +8,8 @@ clusters:
 users:
 - name : master-kubelet
   user:
-    client-certificate: /etc/kubernetes/ssl/kubelet.crt
-    client-key: /etc/kubernetes/ssl/kubelet.key
+    client-certificate: /etc/kubernetes/ssl/kubelet.pem
+    client-key: /etc/kubernetes/ssl/kubelet-key.pem
 contexts:
 - context:
     cluster: local
