--- a/ansible/roles/common/tasks/main.yml
+++ b/ansible/roles/common/tasks/main.yml
@@ -1,4 +1,12 @@
 ---
+- name: install package
+  yum: 
+    name: "{{ item }}"
+    state: present 
+  with_items:
+    - [ docker-engine, etcd, flannel, make, kernel-devel, gcc, wget ]
+  tags: yum
+
 - name: mkdir dir
   file: 
     path: "{{ item }}"
@@ -8,6 +16,7 @@
   with_items:
     - /etc/kubernetes
     - /etc/kubernetes/ssl
+  tags: k8s, tls
 
 - name: copy kubernetes CA and key to k8s and docker
   copy: 
