--- a/ansible/roles/common/handlers/main.yml
+++ b/ansible/roles/common/handlers/main.yml
@@ -1,3 +1,12 @@
 ---
 - name: debug 
   debug: msg="call handler"
+
+- name: yum-clean-all
+  command: yum clean all 
+  tags: yum
+
+- name: yum-makecache
+  command: yum makecache
+  tags: yum
+
