--- a/ansible/roles/centos/files/setup-network-environment.service
+++ b/ansible/roles/centos/files/setup-network-environment.service
@@ -5,7 +5,7 @@ Requires=network-online.target
 After=network-online.target
 [Service]
 ExecStartPre=-/usr/bin/mkdir -p /opt/bin
-ExecStartPre=-/usr/bin/wget --quiet -O /opt/bin/setup-network-environment http://{{ bootstrapper_ip }}/static/setup-network-environment-1.0.1
+ExecStartPre=-/usr/bin/wget --quiet -O /opt/bin/setup-network-environment http://bootstrapper/static/setup-network-environment-1.0.1
 ExecStartPre=-/usr/bin/chmod +x /opt/bin/setup-network-environment
 ExecStart=/opt/bin/setup-network-environment
 RemainAfterExit=yes
