--- a/golang/template/templatefiles/cc-centos.template
+++ b/golang/template/templatefiles/cc-centos.template
@@ -155,8 +155,9 @@
       After=kubelet.service
       Requires=kubelet.service
       [Service]
-      ExecStartPre=/usr/bin/mkdir -p /etc/kubernetes/addons && /usr/bin/wget -P /etc/kubernetes/addons/ http://bootstrapper/static/addons-config/*.yaml
-      ExecStartPre=/usr/bin/docker rm -f kube-addon-manager
+      ExecStartPre=/usr/bin/mkdir -p /etc/kubernetes/addons 
+      ExecStartPre=/usr/bin/wget -P /etc/kubernetes/addons/ -A yaml -r -l 1 -nd http://bootstrapper/static/addons-config/
+      ExecStartPre=-/usr/bin/docker rm -f kube-addon-manager
       ExecStart=/usr/bin/docker run --rm --net=host --name=kube-addon-manager\
       -e KUBECTL_OPTS=--server=http://{{ .MasterHostname }}:8080 \
       -v /etc/kubernetes/addons/:/etc/kubernetes/addons/  \
